fix text wrap bug in ner cloud 	modified:   static/css/vis.css 	modified:   static/js/newstopics.js

--- a/st/static/css/vis.css
+++ b/st/static/css/vis.css
@@ -1,3 +1,11 @@
+.wordwrap { 
+   white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */    
+   white-space: -pre-wrap;     /* Opera <7 */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
+}
+
 div.termcloud_wrap {
     overflow-x: auto;
     overflow-y: auto;
@@ -23,8 +31,15 @@ div.tc-term {
     float: left;
     margin-left: 7px;
     color: steelblue;
+    max-width: 198px;
 }
-
+/*
+div.tc-term-constraint {
+    padding: 0px;
+    max-width: 100px;
+    float: none;
+}
+*/
 .section-label {
     font-size: 18px;
     font-weight: bold;
